// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`findClosest should attempt to find a closest match, empty haystack 1`] = `
{
  "match": null,
  "query": "Button",
}
`;

exports[`findClosest should attempt to find a closest match, empty needle 1`] = `
{
  "match": "Badge",
  "query": "",
}
`;

exports[`findClosest should attempt to find a closest match, exact match 1`] = `
{
  "match": "Alert",
  "query": "Alert",
}
`;

exports[`findClosest should attempt to find a closest match, match spacing 1`] = `
{
  "match": "dolor sit",
  "query": "dolor sit",
}
`;

exports[`findClosest should attempt to find a closest match, multiple matches 1`] = `
{
  "match": "Badge",
  "query": "badge",
}
`;

exports[`findClosest should attempt to find a closest match, multiple matches with case insensitive search 1`] = `
{
  "match": "Badge",
  "query": "BADGE",
}
`;

exports[`findClosest should attempt to find a closest match, non-existent needle 1`] = `
{
  "match": "Alert",
  "query": "lorem",
}
`;

exports[`findClosest should attempt to find a closest match, non-existent needle with case insensitive search 1`] = `
{
  "match": "Alert",
  "query": "LOREM",
}
`;

exports[`findClosest should attempt to find a closest match, partial query 1`] = `
{
  "match": "Button",
  "query": "but",
}
`;

exports[`findClosest should attempt to find a closest match, typo 1`] = `
{
  "match": "Button",
  "query": "buton",
}
`;

exports[`fuzzySearch should fuzzy match, contains match multiple 1`] = `
[
  {
    "distance": 6,
    "item": "AlertGroup",
    "matchType": "contains",
  },
  {
    "distance": 6,
    "item": "BadgeGroup",
    "matchType": "contains",
  },
  {
    "distance": 7,
    "item": "ButtonGroup",
    "matchType": "contains",
  },
]
`;

exports[`fuzzySearch should fuzzy match, empty items 1`] = `[]`;

exports[`fuzzySearch should fuzzy match, empty query 1`] = `[]`;

exports[`fuzzySearch should fuzzy match, empty query extended distance 1`] = `
[
  {
    "distance": 4,
    "item": "Card",
    "matchType": "prefix",
  },
  {
    "distance": 5,
    "item": "Alert",
    "matchType": "prefix",
  },
  {
    "distance": 5,
    "item": "Badge",
    "matchType": "prefix",
  },
  {
    "distance": 6,
    "item": "Button",
    "matchType": "prefix",
  },
  {
    "distance": 10,
    "item": "AlertGroup",
    "matchType": "prefix",
  },
  {
    "distance": 10,
    "item": "BadgeGroup",
    "matchType": "prefix",
  },
  {
    "distance": 10,
    "item": "CardHeader",
    "matchType": "prefix",
  },
  {
    "distance": 11,
    "item": "ButtonGroup",
    "matchType": "prefix",
  },
]
`;

exports[`fuzzySearch should fuzzy match, exact match 1`] = `
[
  {
    "distance": 0,
    "item": "Button",
    "matchType": "exact",
  },
]
`;

exports[`fuzzySearch should fuzzy match, exact match case-insensitive 1`] = `
[
  {
    "distance": 0,
    "item": "Button",
    "matchType": "exact",
  },
]
`;

exports[`fuzzySearch should fuzzy match, fuzzy match within distance 1`] = `
[
  {
    "distance": 5,
    "item": "Badge",
    "matchType": "fuzzy",
  },
  {
    "distance": 6,
    "item": "Alert",
    "matchType": "fuzzy",
  },
  {
    "distance": 6,
    "item": "Card",
    "matchType": "fuzzy",
  },
  {
    "distance": 8,
    "item": "AlertGroup",
    "matchType": "fuzzy",
  },
  {
    "distance": 8,
    "item": "BadgeGroup",
    "matchType": "fuzzy",
  },
  {
    "distance": 10,
    "item": "CardHeader",
    "matchType": "fuzzy",
  },
]
`;

exports[`fuzzySearch should fuzzy match, match within max results 1`] = `
[
  {
    "distance": 3,
    "item": "Card",
    "matchType": "contains",
  },
  {
    "distance": 4,
    "item": "Alert",
    "matchType": "prefix",
  },
]
`;

exports[`fuzzySearch should fuzzy match, match within restricted distance 1`] = `
[
  {
    "distance": 0,
    "item": "Button",
    "matchType": "exact",
  },
]
`;

exports[`fuzzySearch should fuzzy match, multiple words 1`] = `
[
  {
    "distance": 10,
    "item": "Lorem Ipsum Dolor Sit",
    "matchType": "contains",
  },
]
`;

exports[`fuzzySearch should fuzzy match, prefix match 1`] = `
[
  {
    "distance": 3,
    "item": "Button",
    "matchType": "prefix",
  },
]
`;

exports[`fuzzySearch should fuzzy match, prefix match multiple 1`] = `
[
  {
    "distance": 2,
    "item": "Button",
    "matchType": "prefix",
  },
  {
    "distance": 7,
    "item": "ButtonGroup",
    "matchType": "prefix",
  },
]
`;

exports[`fuzzySearch should fuzzy match, single item 1`] = `
[
  {
    "distance": 0,
    "item": "BUTTON",
    "matchType": "exact",
  },
]
`;

exports[`fuzzySearch should fuzzy match, trimmed query 1`] = `
[
  {
    "distance": 0,
    "item": "Button",
    "matchType": "exact",
  },
]
`;

exports[`generateHash should minimally generate a consistent hash: hash, object and primitive values 1`] = `
{
  "valueArray": "0e8e2b3096e6aee20e3cd10b7788ce3d72502061",
  "valueArrayConfirmSort": true,
  "valueArraySort": "3c7765817d3c04f1104093994b6db4371672d3f7",
  "valueBoolFalse": "c0338288abd30f72cd65dad83833448f345f78fa",
  "valueBoolTrue": "d991ef01679b350a728c665383abb257cfeca53a",
  "valueFloat": "ba0abc40d5bc3a257ecf9396e3b2525d7fff76c9",
  "valueInt": "17dada6f0f5fe358d94f7b0849d17fc8b4c5ce1f",
  "valueNull": "f7fd41b8a32014e6ccd665899be623c6d5c99d43",
  "valueObject": "5a7036ff63f04efcc11d6b68eb97a4b9989d1a45",
  "valueObjectConfirm": true,
  "valueObjectConfirmSort": false,
  "valueSet": "86838cc5365d6e9d59fb005d2353dde173712a8a",
  "valueSetConfirmSort": true,
  "valueSymbol": "bf21a9e8fbc5a3846fb05b4fa0859e0917b2202f",
  "valueSymbolUndefined": true,
  "valueUndefined": "bf21a9e8fbc5a3846fb05b4fa0859e0917b2202f",
}
`;
